// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grids  should render all grids correctly 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 49.5% 1% 49.5%;
}

@media (max-width:1040px) {
  .c0 {
    grid-template-columns: auto;
  }
}

<styled.div>
  <div
    className="c0 grid-container is-fullhd"
  />
</styled.div>
`;

exports[`Grids  should render all grids correctly 2`] = `
.c0 {
  background-color: #f6f7e1;
  border: 1px solid rgba(246,247,225,0.5);
  text-align: center;
  width: 100%;
  padding: 5px;
}

@media (max-width:1040px) {

}

<styled.div>
  <div
    className="c0 grid-item target-form"
  />
</styled.div>
`;

exports[`Grids  should render all grids correctly 3`] = `
.c0 {
  background-color: #f2fffb;
  border: 1px solid rgba(242,255,251,0.5);
  text-align: center;
  width: 100%;
}

@media (max-width:1040px) {

}

<styled.div>
  <div
    className="c0 grid-item proposal-form"
  />
</styled.div>
`;

exports[`Grids  should render all grids correctly 4`] = `
.c0 {
  background-color: #e0edf9;
  border: 1px solid rgba(224,237,249,0.5);
  text-align: center;
}

@media (max-width:1040px) {

}

<styled.div>
  <div
    className="c0 grid-item data-form"
  />
</styled.div>
`;

exports[`Grids  should render all grids correctly 5`] = `
.c0 {
  background-color: #fff4fa;
  border: 1px solid rgba(255,244,250,0.5);
  text-align: center;
}

@media (max-width:1040px) {

}

<styled.div>
  <div
    className="c0 grid-item telescope-form"
  />
</styled.div>
`;

exports[`Grids  should render all grids correctly 6`] = `
.c0 {
  display: grid;
  grid-template-columns: 8% 10% 20% 10% 8% 34% border:1px solid rgba(255,255,255,0);
  text-align: left;
}

@media (max-width:1040px) {

}

@media (max-width:1272px) {
  .c0 {
    grid-template-columns: 22%;
  }
}

@media (max-width:1192px) {
  .c0 {
    grid-template-columns: 30%;
  }
}

@media (max-width:764px) {
  .c0 {
    grid-template-columns: 40%;
  }
}

@media (max-width:598px) {
  .c0 {
    grid-template-columns: 50%;
  }
}

<styled.div>
  <div
    className="c0 grid-item"
  />
</styled.div>
`;

exports[`Grids  should render all grids correctly 7`] = `
.c0.c0 {
  display: grid;
  grid-template-columns: 50% 50%;
  padding: 10px;
}

@media (max-width:1040px) {

}

@media (max-width:1272px) {

}

@media (max-width:1192px) {

}

@media (max-width:764px) {

}

@media (max-width:598px) {

}

<styled.div>
  <div
    className="c0 main-grid"
  />
</styled.div>
`;

exports[`Grids  should render all grids correctly 8`] = `
.c0.c0 {
  text-align: left;
  padding-left: 10px;
}

@media (max-width:1040px) {

}

@media (max-width:1272px) {

}

@media (max-width:1192px) {

}

@media (max-width:764px) {

}

@media (max-width:598px) {

}

<styled.div>
  <div
    className="c0 sub-grid"
  />
</styled.div>
`;
